# Form4

./: .dockerignore  .gitignore  CLAUDE.md  MINI_CLEANUP_HANDOFF_2026-04-19.md  MORNING_HANDOFF_2026-05-12.md  OPERATIONS.md  PROGRESS.md  README.md  com.openclaw.backfill-returns.plist  com.openclaw.breaking-signal.plist  com.openclaw.ceowatcher-reader.plist  com.openclaw.compute-signals.plist  com.openclaw.congress-scraper.plist  com.openclaw.daily-content.plist  com.openclaw.daily-prices.plist  com.openclaw.insideredge-digest.plist  com.openclaw.insideredge-notifications.plist  com.openclaw.portfolio-runner.plist  com.openclaw.trial-emails.plist  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.sandbox.yml  docker-compose.yml  requirements.txt
api/: .env.example  alpaca.py  (+20 more)
dataplane/: DESIGN.md  README.md  dagster.yaml  pyproject.toml  sqitch.conf
dataplane/dagster_project/: __init__.py  definitions.py  resources.py
dataplane/dataplane/: MCP.md  __init__.py  __main__.py  backfill.py  catalog.py  desk.py  discovery.py  emit.py  mcp_server.py  observation.py  parity.py  pit.py  report.py  signal.py  status.py  strategy.py  testing.py  upstream.py
dataplane/dbt_project/: dbt_project.yml  profiles.yml
dataplane/deploy/: com.openclaw.dagster-daemon.plist  com.openclaw.dagster-webserver.plist  com.openclaw.pyrrho-desk.plist  install_dagster_services.sh  install_pyrrho_desk_service.sh  workspace.yaml
dataplane/scripts/: expand_price_universe.py  push_missed_alerts.py
dataplane/sqitch/: sqitch.plan
dataplane/strategies/: agrade_drawdown_buy.v1.yaml
(+660 files in other folders)
